[project]
name = "policyagent"
version = "0.1.0"
description = "AI Agent for extracting rules from healthcare policy PDFs"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Roni" }
]
keywords = [
    "ai",
    "agent",
    "ocr",
    "healthcare",
    "policy",
    "sql",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "httpx>=0.27,<1.0",
    "jinja2>=3.1,<4.0",

    # OCR - PaddleOCR ONNX
    "rapidocr>=3.0,<4.0",
    "rapidocr-pdf>=0.4,<1.0",
    "onnxruntime>=1.16,<2.0",

    # PDF Processing
    "pymupdf>=1.24,<2.0",

    # SQL Validation
    "sqlparse>=0.5,<1.0",
    "sqlglot>=25,<30",

    # Web Search
    "duckduckgo-search>=6,<7",

    # Model Downloads
    "huggingface-hub>=0.20,<1.0",

    # LLM Clients
    "openai>=1.0,<2.0",
    "anthropic>=0.30,<1.0",

    # Utilities
    "python-dotenv>=1.0,<2.0",
    "rich>=13.0,<14.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0,<9.0",
    "pytest-cov>=5.0,<6.0",
    "pytest-asyncio>=0.24,<1.0",
    "pytest-mock>=3.14,<4.0",

    # Linting & Formatting
    "ruff>=0.5,<1.0",

    # Type Checking
    "pyright>=1.1,<2.0",
    "mypy>=1.10,<2.0",

    # Development
    "ipython>=8.0,<9.0",
    "pre-commit>=3.7,<4.0",
]

gpu = [
    "onnxruntime-gpu>=1.16,<2.0",
]

[project.scripts]
policyagent = "policyagent.cli:main"

[project.urls]
Homepage = "https://github.com/roni/policyAgent"
Documentation = "https://github.com/roni/policyAgent#readme"
Repository = "https://github.com/roni/policyAgent"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/policyagent"]

# ============================================================================
# RUFF Configuration
# ============================================================================
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ANN",    # flake8-annotations
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # Ruff-specific rules
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented code)
    "PL",     # pylint
]
ignore = [
    "ANN401",  # Dynamically typed expressions (Any)
    "PLR0913", # Too many arguments
    "PLR2004", # Magic value comparison
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ANN",     # No type annotations required in tests
    "S101",    # Assert allowed in tests
    "PLR2004", # Magic values allowed in tests
]

[tool.ruff.lint.isort]
known-first-party = ["policyagent"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ============================================================================
# PYRIGHT Configuration
# ============================================================================
[tool.pyright]
pythonVersion = "3.11"
pythonPlatform = "All"
typeCheckingMode = "standard"

include = ["src"]
exclude = [
    "**/__pycache__",
    "**/node_modules",
    ".venv",
    "venv",
]

reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = true
reportUnusedVariable = true
reportUnusedFunction = true
reportOptionalMemberAccess = true
reportGeneralTypeIssues = true

# Relax checks for third-party library types
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportPrivateImportUsage = false
reportAttributeAccessIssue = false
reportCallIssue = false
reportUnnecessaryIsInstance = false

# ============================================================================
# PYTEST Configuration
# ============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

# ============================================================================
# COVERAGE Configuration
# ============================================================================
[tool.coverage.run]
source = ["src/policyagent"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 80
show_missing = true

# ============================================================================
# MYPY Configuration (alternative to pyright)
# ============================================================================
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# ============================================================================
# BANDIT Configuration (Security)
# ============================================================================
[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv"]
skips = ["B101"]  # Skip assert warnings
